header part done

--- a/index.html
+++ b/index.html
@@ -25,8 +25,19 @@
             <button class="btn-green">Get Early Access</button>
         </nav>
 
-        
+        <section id="header-banner">            
+            <div id="head-main">
+                <div class="head-small"><p><img src="./assets/center.png" alt="">Early Access Now Open</p></div>
+
+                <h1>Structured Thinking,<br><span>Not Just Note-Taking.</span></h1>
+                <p class="head-main-p">A private space to store notes, links, and learning summaries — designed to<br>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+                <button class="btn-green">Start Building Your Vault <img src="./assets/ArrowRight.png" alt=""></button>
+                <button class="btn-white"><img src="./assets/Play.png" alt="">See How It Works</button>
+            </div>
+        </section>
     </header>
+
+    <main></main>
     
 </body>
 </html>
