--- a/index.html
+++ b/index.html
@@ -27,17 +27,69 @@
 
         <section id="header-banner">            
             <div id="head-main">
-                <div class="head-small"><p><img src="./assets/center.png" alt="">Early Access Now Open</p></div>
+                <div class="head-small"><p><img src="./assets/center.png" alt="center">Early Access Now Open</p></div>
 
                 <h1>Structured Thinking,<br><span>Not Just Note-Taking.</span></h1>
                 <p class="head-main-p">A private space to store notes, links, and learning summaries — designed to<br>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
-                <button class="btn-green">Start Building Your Vault <img src="./assets/ArrowRight.png" alt=""></button>
-                <button class="btn-white"><img src="./assets/Play.png" alt="">See How It Works</button>
+                <button class="btn-green">Start Building Your Vault <img src="./assets/ArrowRight.png" alt="ArrowRight"></button>
+                <button class="btn-white"><img src="./assets/Play.png" alt="Play">See How It Works</button>
             </div>
         </section>
     </header>
 
-    <main></main>
+    <main>
+        <section id="main-cards">
+            <h3>Notes don't fail, Structure does.</h3>
+            <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+            <div class="card-container">
+                <div class="card">
+                     <div class="png">
+                        <img src="./assets/Vector.png" alt="Vector">
+                     </div>
+                    <h5>Scattered notes</h5>
+                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <div class="card">
+                    <div class="png">
+                        <img src="./assets/Bookmarks.png" alt="Bookmark">
+                    </div>
+                    <h5>Bookmark overload</h5>
+                    <p>Hundreds of saved links you'll never revisit or remember.</p>
+                </div>
+                <div class="card">
+                    <div class="png">
+                        <img src="./assets/Brain.png" alt="Brain">
+                    </div>
+                    <h5>No idea connections</h5>
+                    <p>Insights stay isolated, never building into bigger understanding.</p>
+                </div>
+                <div class="card">
+                    <div class="png">
+                        <img src="./assets/Info.png" alt="Info">
+                    </div>
+                    <h5>Forgetting what<br>you learned</h5>
+                    <p>Knowledge fades because there's no system to retain it.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="main-part">
+            <div class="main-part-image"><img src="./assets/knowledge.png" alt="Knowledge"></div>
+
+            <div class="main-part-content">
+                <h6>The Solution</h6>
+                <h3>Your second brain, structured by design.</h3>
+                <p class="main-part-content-ptext">Personal Knowledge Vault isn't another note-taking app. z <br>It's a thinking environment where every note, link, and summary <br> becomes part of an interconnected web of understanding.</p>
+                <div>
+                    <p><img src="./assets/CheckCircle.png" alt="CheckCircle">Capture ideas with structure built-in from day one</p>
+                    <p><img src="./assets/CheckCircle.png" alt="CheckCircle"></p>
+                    <p><img src="./assets/CheckCircle.png" alt="CheckCircle"></p>
+                    <p><img src="./assets/CheckCircle.png" alt="CheckCircle"></p>
+                </div>
+            </div>
+        </section>
+
+    </main>
     
 </body>
 </html>
