--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
                 <h6>The Solution</h6>
                 <h3>Your second brain, structured by design.</h3>
                 <p class="main-part-content-ptext">Personal Knowledge Vault isn't another note-taking app. z <br>It's a thinking environment where every note, link, and summary <br> becomes part of an interconnected web of understanding.</p>
-                <div>
+                <div class="checked-part">
                     <p><img src="./assets/CheckCircle.png" alt="CheckCircle">Capture ideas with structure built-in from day one</p>
-                    <p><img src="./assets/CheckCircle.png" alt="CheckCircle"></p>
-                    <p><img src="./assets/CheckCircle.png" alt="CheckCircle"></p>
-                    <p><img src="./assets/CheckCircle.png" alt="CheckCircle"></p>
+                    <p><img src="./assets/CheckCircle.png" alt="CheckCircle">Connect related concepts automatically as you write</p>
+                    <p><img src="./assets/CheckCircle.png" alt="CheckCircle">Build lasting knowledge through reflection prompts</p>
+                    <p><img src="./assets/CheckCircle.png" alt="CheckCircle">Find anything instantly with semantic search</p>
                 </div>
             </div>
         </section>
