challenge part done

--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
             </div>
         </section>
 
+        <section id="end-part">
+            <h2>Ready To Think More Clearly?</h2>
+            <p>Join thousands of learners who are building their personal knowledge vaults.<br>Start free, no credit card required.</p>
+            <button class="btn-green">Get Early Access <img src="./assets/ArrowRight.png" alt="ArrowRight"></button>
+            <p style="line-height: 20px !important;" >Free during early access • No credit card needed</p>
+        </section>
+
     </main>
     
 </body>
