--- a/index.html
+++ b/index.html
@@ -100,18 +100,22 @@
     </main>
 
     <footer>
-        <div class="footer-content">
-            <img src="./assets/logo-footer.png" alt="logo-footer">
-        </div>
-        <div class="footer-social">
-            <p>Social Links</p>
-            <div class="social-links">
-                <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-                <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+        <div class="footer-elements">
+            <div class="footer-content">
+                <img src="./assets/logo-footer.png" alt="logo-footer">
             </div>
+
+            <div class="footer-social">
+                <p>Social Links</p>
+                <div class="social-links">
+                    <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                </div>
+            </div>
+            <hr>
         </div>
-        <hr>
+
         <div class="footer-end">
             <p>&copy; 2026 Personal Knowledge Vault. All rights reserved.</p>
         </div>
