Everthing's OK (IN SHA ALLAH)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="./assets/logo-footer.png" type="image/x-icon">
 
     <title>Knowledge-Vault</title>
 </head>
@@ -78,7 +79,7 @@
             <div class="main-part-image"><img src="./assets/knowledge.png" alt="Knowledge"></div>
 
             <div class="main-part-content">
-                <h6>The Solution</h6>
+                <h6>THE SOLUTION</h6>
                 <h3>Your second brain, structured by design.</h3>
                 <p class="main-part-content-ptext">Personal Knowledge Vault isn't another note-taking app. z <br>It's a thinking environment where every note, link, and summary <br> becomes part of an interconnected web of understanding.</p>
                 <div class="checked-part">
